--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block page_header %}
-    <div class="container header-container">
+    <div class="container header-contianer">
         <div class="row">
             <div class="col"></div>
         </div>
@@ -18,10 +18,11 @@
                 </h1>
                 <div class="my-5">
                     <h4>
-                        <a href="" class="shop-now-button btn btn-large rounded-0 text-uppercase py-3">Shop Now</a>
+                        <a href="" class="shop-now-button btn btn-ls rounded-0 text-uppercase py-3">Shop Now</a>
                     </h4>
                 </div>
-            </div>
+            </div>    
         </div>
     </div>
+
 {% endblock %}
